Use new prerelease dependencies; fix hybrid-array deprecations
This includes the following dependency bumps along with fixing all of
the deprecation warnings that come when upgrading `hybrid-array` to
v0.2.0-pre.9:

- `aead` v0.6.0-rc.0
- `aes` v0.9.0-pre.1
- `chacha20` v0.10.0-pre.1
- `cipher` v0.5.0-pre.6
- `cmac` v0.8.0-pre.1
- `crypto-common` v0.2.0-rc.0
- `ctr` v0.10.0-pre.1
- `dbl` v0.4.0-rc.0
- `digest` v0.11.0-pre.9
- `ghash` v0.6.0-rc.0
- `hybrid-array` v0.2.0-rc.9
- `pmac` v0.8.0-pre.1
- `poly1305` v0.9.0-rc.0
- `polyval` v0.7.0-rc.0
- `universal-hash` v0.6.0-rc.0

--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -15,16 +15,14 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.65"
 
 [dependencies]
-aead = { version = "=0.6.0-pre.0", default-features = false }
+aead = { version = "0.6.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
-zeroize_crate = { package = "zeroize", version = "1.6", optional = true, default-features = false, features = [
-    "derive",
-] }
+zeroize = { version = "1.6", optional = true, default-features = false, features = ["derive"] }
 ascon = "0.4"
 
 [dev-dependencies]
 hex-literal = "0.4"
-aead = { version = "=0.6.0-pre.0", features = ["alloc"] }
+aead = { version = "0.6.0-rc.0", features = ["alloc"] }
 
 [features]
 default = ["alloc", "getrandom"]
@@ -35,7 +33,7 @@ getrandom = ["aead/getrandom", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
 stream = ["aead/stream"]
-zeroize = ["zeroize_crate", "ascon/zeroize"]
+zeroize = ["dep:zeroize", "ascon/zeroize"]
 
 [package.metadata.docs.rs]
 all-features = true
