--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -14,14 +14,14 @@ keywords = ["encryption", "aead"]
 rust-version = "1.65"
 
 [dependencies]
-aead = { version = "=0.6.0-pre.0", default-features = false }
-cipher = { version = "=0.5.0-pre.4", default-features = false }
-ctr = { version = "=0.10.0-pre.0", default-features = false }
+aead = { version = "0.6.0-rc.0", default-features = false }
+cipher = { version = "=0.5.0-pre.6", default-features = false }
+ctr = { version = "=0.10.0-pre.1", default-features = false }
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
-aes = { version = "=0.9.0-pre" }
+aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
+aes = { version = "=0.9.0-pre.1" }
 hex-literal = "0.4.1"
 
 [features]
