--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -17,16 +17,16 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.65"
 
 [dependencies]
-aead = { version = "=0.6.0-pre.0", default-features = false }
-aes = { version = "=0.9.0-pre", optional = true }
-cipher = "=0.5.0-pre.4"
-ctr = "=0.10.0-pre.0"
-ghash = { version = "=0.6.0-pre.0", default-features = false }
+aead = { version = "0.6.0-rc.0", default-features = false }
+aes = { version = "=0.9.0-pre.1", optional = true }
+cipher = "=0.5.0-pre.6"
+ctr = "=0.10.0-pre.1"
+ghash = { version = "0.6.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
+aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
 hex-literal = "0.4"
 
 [features]
