--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -17,13 +17,13 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.72"
 
 [dependencies]
-aead = "=0.6.0-pre.0"
-aes = "=0.9.0-pre"
-cipher = "=0.5.0-pre.4"
-cmac = "0.8.0-pre"
-ctr = "=0.10.0-pre.0"
-dbl = "0.4.0-pre.4"
-digest = { version = "0.11.0-pre.8", features = ["mac"] }
+aead = "0.6.0-rc.0"
+aes = "=0.9.0-pre.1"
+cipher = "=0.5.0-pre.6"
+cmac = "=0.8.0-pre.1"
+ctr = "=0.10.0-pre.1"
+dbl = "0.4.0-rc.0"
+digest = { version = "=0.11.0-pre.9", features = ["mac"] }
 zeroize = { version = "1", default-features = false }
 
 # optional dependencies
