--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -20,25 +20,25 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.65"
 
 [dependencies]
-aead = { version = "=0.6.0-pre.0", default-features = false }
-chacha20 = { version = "=0.10.0-pre", features = ["zeroize"] }
-cipher = "=0.5.0-pre.4"
-poly1305 = "=0.9.0-pre"
+aead = { version = "0.6.0-rc.0", default-features = false }
+chacha20 = { version = "=0.10.0-pre.1", default-features = false, features = ["xchacha", "zeroize"] }
+cipher = "=0.5.0-pre.6"
+poly1305 = "0.9.0-rc.0"
 zeroize = { version = "1.8", default-features = false }
 
 [dev-dependencies]
-aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
+aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
 
 [features]
-default       = ["alloc", "getrandom"]
-std           = ["aead/std", "alloc"]
-alloc         = ["aead/alloc"]
-arrayvec      = ["aead/arrayvec"]
-getrandom     = ["aead/getrandom", "rand_core"]
-heapless      = ["aead/heapless"]
-rand_core     = ["aead/rand_core"]
+default = ["alloc", "getrandom"]
+std = ["aead/std", "alloc"]
+alloc = ["aead/alloc"]
+arrayvec = ["aead/arrayvec"]
+getrandom = ["aead/getrandom", "rand_core"]
+heapless = ["aead/heapless"]
+rand_core = ["aead/rand_core"]
 reduced-round = []
-stream        = ["aead/stream"]
+stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
