--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -18,9 +18,9 @@ rust-version = "1.65"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
-aes = { version = "=0.9.0-pre.1", optional = true }
-cipher = "=0.5.0-pre.6"
-ctr = "=0.10.0-pre.1"
+aes = { version = "=0.9.0-pre.2", optional = true }
+cipher = "=0.5.0-pre.7"
+ctr = "0.10.0-pre.2"
 ghash = { version = "0.6.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
