--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -18,10 +18,10 @@ rust-version = "1.72"
 
 [dependencies]
 aead = "0.6.0-rc.0"
-aes = "=0.9.0-pre.1"
-cipher = "=0.5.0-pre.6"
-cmac = "=0.8.0-pre.1"
-ctr = "=0.10.0-pre.1"
+aes = "=0.9.0-pre.2"
+cipher = "=0.5.0-pre.7"
+cmac = "0.8.0-pre.2"
+ctr = "0.10.0-pre.2"
 dbl = "0.4.0-rc.0"
 digest = { version = "=0.11.0-pre.9", features = ["mac"] }
 zeroize = { version = "1", default-features = false }
