--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -14,13 +14,13 @@ documentation = "https://docs.rs/aes-gcm-siv"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "aes-gcm", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.65"
+rust-version = "1.72"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
-aes = { version = "=0.9.0-pre.1", optional = true }
-cipher = "=0.5.0-pre.6"
-ctr = "=0.10.0-pre.1"
+aes = { version = "=0.9.0-pre.2", optional = true }
+cipher = "=0.5.0-pre.7"
+ctr = "0.10.0-pre.2"
 polyval = { version = "0.7.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
