--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-siv"
-version = "0.7.0"
+version = "0.8.0-pre.2"
 description = """
 Pure Rust implementation of the AES-SIV Misuse-Resistant Authenticated
 Encryption Cipher (RFC 5297) with optional architecture-specific
@@ -27,7 +27,7 @@ digest = { version = "=0.11.0-pre.9", features = ["mac"] }
 zeroize = { version = "1", default-features = false }
 
 # optional dependencies
-pmac = { version = "0.8.0-pre", optional = true }
+pmac = { version = "0.8.0-pre.2", optional = true }
 
 [dev-dependencies]
 blobby = "0.3"
