--- a/belt-dwp/Cargo.toml
+++ b/belt-dwp/Cargo.toml
@@ -9,16 +9,16 @@ documentation = "https://docs.rs/belt-dwp"
 repository = "https://github.com/RustCrypto/AEADs/tree/master/belt-dwp"
 keywords = ["aead", "belt-dwp"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.56"
+rust-version = "1.81"
 
 [dependencies]
-aead = { version = "0.5", default-features = false }
+aead = { version = "0.6.0-rc.0", default-features = false }
 zeroize = { version = "1.7", default-features = false }
-universal-hash = { version = "0.5" }
+universal-hash = { version = "0.6.0-rc.0" }
 opaque-debug = { version = "0.3" }
 
-belt-block = { version = "0.1" }
-belt-ctr = { version = "0.1"}
+belt-block = { version = "0.2.0-pre.2" }
+belt-ctr = { version = "0.2.0-pre" }
 
 [dev-dependencies]
 hex-literal = "0.4"
