--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [workspace]
 members = [
     "aead-stream",
-    "aes-gcm",
-    "aes-gcm-siv",
-    "aes-siv",
-    "ascon-aead",
-    "ccm",
-    "chacha20poly1305",
-    "deoxys",
-    "eax",
-    "ocb3",
-    "xaes-256-gcm",
+    #"aes-gcm",
+    #"aes-gcm-siv",
+    #"aes-siv",
+    #"ascon-aead",
+    #"ccm",
+    #"chacha20poly1305",
+    #"deoxys",
+    #"eax",
+    #"ocb3",
+    #"xaes-256-gcm",
 ]
 resolver = "2"
 
