--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "aes-siv",
     "ascon-aead",
     "ccm",
-    #"chacha20poly1305",
+    "chacha20poly1305",
     #"deoxys",
     #"eax",
     #"ocb3",
@@ -19,6 +19,8 @@ aead-stream = { path = "./aead-stream" }
 
 aead          = { git = "https://github.com/RustCrypto/traits.git" }
 crypto-common = { git = "https://github.com/RustCrypto/traits.git" }
+
+chacha20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
 
 ctr = { git = "https://github.com/RustCrypto/block-modes.git" }
 
