--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -9,7 +9,7 @@ extended nonce variant of ChaCha20Poly1305, and the reduced-round
 ChaCha8Poly1305 and ChaCha12Poly1305 lightweight variants.
 """
 authors = ["RustCrypto Developers"]
-edition = "2021"
+edition = "2024"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/chacha20poly1305"
@@ -17,12 +17,12 @@ homepage = "https://github.com/RustCrypto/AEADs/tree/master/chacha20poly1305"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "chacha20", "poly1305", "xchacha20", "xchacha20poly1305"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.81"
+rust-version = "1.85"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
 chacha20 = { version = "=0.10.0-pre.3", default-features = false, features = ["xchacha"] }
-cipher = "=0.5.0-pre.7"
+cipher = "=0.5.0-pre.8"
 poly1305 = "0.9.0-rc.0"
 zeroize = { version = "1.8", optional = true, default-features = false }
 
@@ -30,16 +30,14 @@ zeroize = { version = "1.8", optional = true, default-features = false }
 aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
 
 [features]
-default = ["alloc", "getrandom"]
-std = ["aead/std", "alloc"]
+default = ["alloc", "os_rng"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-getrandom = ["aead/getrandom", "rand_core"]
+os_rng = ["aead/os_rng", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
 reduced-round = []
-stream = ["aead/stream"]
 zeroize = ["dep:zeroize", "chacha20/zeroize"]
 
 [package.metadata.docs.rs]
