--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     "ascon-aead",
     "ccm",
     "chacha20poly1305",
-    #"deoxys",
+    "deoxys",
     #"eax",
     #"ocb3",
     #"xaes-256-gcm",
