--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -14,12 +14,12 @@ repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "deoxys", "deoxys-i", "deoxys-ii"]
 categories = ["cryptography", "no-std"]
 readme = "README.md"
-edition = "2021"
-rust-version = "1.81"
+edition = "2024"
+rust-version = "1.85"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
-aes = { version = "=0.9.0-pre.2", features = ["hazmat"], default-features = false }
+aes = { version = "=0.9.0-pre.3", features = ["hazmat"], default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
@@ -28,15 +28,13 @@ aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
 hex-literal = "0.4"
 
 [features]
-default = ["alloc", "getrandom"]
-std = ["aead/std", "alloc"]
+default = ["alloc", "os_rng"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-getrandom  = ["aead/getrandom", "rand_core"]
+os_rng  = ["aead/os_rng", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
-stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
