--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -17,23 +17,23 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.2", default-features = false }
-aes = { version = "0.9.0-rc.1", optional = true }
-cipher = "0.5.0-rc.1"
-ctr = "0.10.0-rc.1"
-polyval = { version = "0.7.0-rc.2", default-features = false }
+aead = { version = "0.6.0-rc.3", default-features = false }
+aes = { version = "0.9.0-rc.2", optional = true }
+cipher = "0.5.0-rc.2"
+ctr = "0.10.0-rc.2"
+polyval = { version = "0.7.0-rc.3", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.2", features = ["dev"], default-features = false }
+aead = { version = "0.6.0-rc.3", features = ["dev"], default-features = false }
 
 [features]
-default = ["aes", "alloc", "os_rng"]
+default = ["aes", "alloc", "getrandom"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-os_rng = ["aead/os_rng", "rand_core"]
+getrandom = ["aead/getrandom"]
 rand_core = ["aead/rand_core"]
 
 [package.metadata.docs.rs]
