--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -14,20 +14,20 @@ keywords = ["encryption", "aead"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.2", default-features = false }
-cipher = { version = "0.5.0-rc.1", default-features = false }
-ctr = { version = "0.10.0-rc.1", default-features = false }
+aead = { version = "0.6.0-rc.3", default-features = false }
+cipher = { version = "0.5.0-rc.2", default-features = false }
+ctr = { version = "0.10.0-rc.2", default-features = false }
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.2", features = ["dev"], default-features = false }
-aes = { version = "0.9.0-rc.1" }
+aead = { version = "0.6.0-rc.3", features = ["dev"], default-features = false }
+aes = { version = "0.9.0-rc.2" }
 hex-literal = "1"
 
 [features]
-default = ["alloc", "os_rng"]
+default = ["alloc", "getrandom"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-os_rng = ["aead/os_rng", "rand_core"]
+getrandom = ["aead/getrandom"]
 rand_core = ["aead/rand_core"]
