--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -18,21 +18,21 @@ edition = "2024"
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.2", default-features = false }
-aes = { version = "0.9.0-rc.1", features = ["hazmat"], default-features = false }
+aead = { version = "0.6.0-rc.3", default-features = false }
+aes = { version = "0.9.0-rc.2", features = ["hazmat"], default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.2", features = ["dev"], default-features = false }
+aead = { version = "0.6.0-rc.3", features = ["dev"], default-features = false }
 hex-literal = "1"
 
 [features]
-default = ["alloc", "os_rng"]
+default = ["alloc", "getrandom"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-os_rng = ["aead/os_rng", "rand_core"]
+getrandom = ["aead/getrandom"]
 rand_core = ["aead/rand_core"]
 
 [package.metadata.docs.rs]
