--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -20,22 +20,22 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.2", default-features = false }
-cipher = "0.5.0-rc.1"
-cmac = "0.8.0-rc.1"
-ctr = "0.10.0-rc.1"
+aead = { version = "0.6.0-rc.3", default-features = false }
+cipher = "0.5.0-rc.2"
+cmac = "0.8.0-rc.3"
+ctr = "0.10.0-rc.2"
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.2", features = ["dev"], default-features = false }
-aes = "0.9.0-rc.1"
+aead = { version = "0.6.0-rc.3", features = ["dev"], default-features = false }
+aes = "0.9.0-rc.2"
 
 [features]
-default = ["alloc", "os_rng"]
+default = ["alloc"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-os_rng = ["aead/os_rng", "rand_core"]
+getrandom = ["aead/getrandom"]
 rand_core = ["aead/rand_core"]
 
 [package.metadata.docs.rs]
