--- a/xaes-256-gcm/Cargo.toml
+++ b/xaes-256-gcm/Cargo.toml
@@ -16,21 +16,21 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.2", default-features = false }
-aes = "0.9.0-rc.1"
+aead = { version = "0.6.0-rc.3", default-features = false }
+aes = "0.9.0-rc.2"
 aes-gcm = { version = "0.11.0-rc.1", default-features = false, features = ["aes"] }
-cipher = "0.5.0-rc.1"
+cipher = "0.5.0-rc.2"
 aead-stream = { version = "0.6.0-rc.1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.2", features = ["dev"], default-features = false }
+aead = { version = "0.6.0-rc.3", features = ["dev"], default-features = false }
 hex-literal = "1"
 
 [features]
-default = ["alloc", "os_rng"]
+default = ["alloc", "getrandom"]
 alloc = ["aead/alloc", "aead-stream?/alloc", "aes-gcm/alloc"]
 arrayvec = ["aead/arrayvec", "aes-gcm/arrayvec"]
-os_rng = ["aead/os_rng", "aes-gcm/os_rng", "rand_core"]
+getrandom = ["aes-gcm/getrandom"]
 rand_core = ["aead/rand_core", "aes-gcm/rand_core"]
 
 [package.metadata.docs.rs]
