CI: run tests as debug builds with `--lib`
- Runs tests with `--lib` and adds separate `--doc` step
- Run tests with debug builds and adds a separate `--release` step

This should test more combinations (both debug and release builds), but
largely serves as a workaround for the weirdness happening in #752
where feature-gating seems to be working incorrectly in the doctests.

--- a/.github/workflows/chacha20poly1305.yml
+++ b/.github/workflows/chacha20poly1305.yml
@@ -68,9 +68,10 @@ jobs:
           toolchain: ${{ matrix.rust }}
           targets: ${{ matrix.target }}
       - run: ${{ matrix.deps }}
-      - run: cargo test --target ${{ matrix.target }} --release --no-default-features
-      - run: cargo test --target ${{ matrix.target }} --release
-      - run: cargo test --target ${{ matrix.target }} --release --features reduced-round
-      - run: cargo test --target ${{ matrix.target }} --release --all-features
-      - run: cargo build --target ${{ matrix.target }} --benches
+      - run: cargo test --target ${{ matrix.target }} --lib --no-default-features
+      - run: cargo test --target ${{ matrix.target }} --lib
+      - run: cargo test --target ${{ matrix.target }} --lib --features zeroize
+      - run: cargo test --target ${{ matrix.target }} --all-features --lib
+      - run: cargo test --target ${{ matrix.target }} --all-features --release
+      - run: cargo test --target ${{ matrix.target }} --all-features --doc
 
